arreglado bugs e implementacion de procedimiento del juego sin recargar pagina

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <section class="started" id="section_started">
 
         <div class="score">
-            <p>Score: <span class="scoreBoard">0</span></p>
+            <span>Score: <span class="scoreBoard">0</span></span>
         </div>
-            <p><span class="heart">❤️</span> x<span class="amount">3</span></p>
+            <span><span class="heart">❤️</span> x<span class="amount">3</span></span>
     
         <div class="container" id="container">    
             
