--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="./assets/artificialIcon.png">
 </head>
 <body>
-
+    <audio src="./assets/quiz_background_music.mp3" loop></audio>
     <section class="menu" id="menu_selector">
         <h1>TrivIA Game</h1>
         <div class="selector">
