--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <section class="endGame">
         <h2>Juego Terminado</h2>
         <p>Puntaje: <span id="finalScore"></span></p>
+        <p>Maximo puntaje: <pan id="max-score"></pan></p>
         <div class="selector">
             <button id="backStart">Volver a inicio</button>
         </div>
