anadido localstorage para la maxima puntuacion

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section class="endGame">
         <h2>Juego Terminado</h2>
         <p>Puntaje: <span id="finalScore"></span></p>
-        <p>Maximo puntaje: <pan id="max-score"></pan></p>
+        <p>Mejor puntaje: <pan id="maxScore"></pan></p>
         <div class="selector">
             <button id="backStart">Volver a inicio</button>
         </div>
